Closed Bug 1440599 Opened 6 years ago Closed 6 years ago

js/src/jit-test/tests/debug/bug1106719.js is going to permafail when Gecko 60 merges to Beta on 2018-03-01

Categories

(Core :: JavaScript Engine: JIT, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: aryx, Assigned: jonco)

References

Details

Attachments

(1 file)

Nightly-as-Beta simulation (only the top 6 changesets belong to the simulation): https://treeherder.mozilla.org/#/jobs?repo=try&revision=a7b3a15a3472b7167324cadafa4a2ffb2315c737&filter-resultStatus=testfailed&filter-resultStatus=busted&filter-resultStatus=exception&filter-resultStatus=retry&filter-resultStatus=usercancel&filter-resultStatus=running&filter-resultStatus=pending&filter-resultStatus=runnable&selectedJob=163889525
It has bug 1435317 backed out because that caused bug 1440519.

Log: https://treeherder.mozilla.org/logviewer.html#?job_id=163889525&repo=try

TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/debug/bug1106719.js | /builds/worker/workspace/build/src/js/src/jit-test/tests/debug/bug1106719.js:6:1 Error: attempt to set maxBytes to the value less than the current gcBytes (1294336) (code 3, args "--ion-eager --ion-offthread-compile=off")
Flags: needinfo?(jcoppeard)
There are a bunch of tests like this and they are pretty fragile.  We should do something about them.
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
Priority: -- → P1
I think we should just remove this check.  It's part of the testing functions, not the product itself, and comparing against the current GC heap size is problematic already because it's an atomic field and is both incremented and decremented by helper threads.

If something sets the max heap size lower than the current size then there will be a failure at the next allocation.

What do you think?
Attachment #8954347 - Flags: review?(sphink)
Comment on attachment 8954347 [details] [diff] [review]
bug1440599-remove-check

Review of attachment 8954347 [details] [diff] [review]:
-----------------------------------------------------------------

That's a straightforward way to fix a longstanding nuisance! You're right, we're not getting any use of the check and it's a pain in the posterior.
Attachment #8954347 - Flags: review?(sphink) → review+
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/4abb98d61e99
Allow setting max GC heap size smaller than current size in the shell r=sfink
https://hg.mozilla.org/mozilla-central/rev/4abb98d61e99
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: