Bug 1440599 - Allow setting max GC heap size smaller than current size in the shell r=sfink